# kabigon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  ERROR_HANDLING_IMPROVEMENTS.md  GOTCHA.md  IMPROVEMENTS.md  MEMORY.md  Makefile  README.md  TASTE.md  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  docker.yml  publish.yml
docs/: CLI_DESIGN.md  EARLY_LOAD_CHAIN.md
docs/architecture/: url-processing.mmd
docs/plans/: 2026-06-16_ponytail-audit-cleanup-plan.md
examples/: async_usage.py  fetch_billgertz_tweet.py  ptt.py  read_reddit.py  simple_usage.py  taiwan_sites.py  truthsocial.py  twitter.py
skills/kabigon/: SKILL.md
skills/url-content-loading/: SKILL.md
src/kabigon/: __init__.py  api.py  cli.py  compose.py  firecrawl.py  httpx.py  load_chain.py  loader.py  loader_registry.py  pdf.py  pipelines.py  playwright.py  ptt.py  reddit.py  reel.py  routing.py  singlefile.py  truthsocial.py  twitter.py  youtube.py  youtube_ytdlp.py  ytdlp.py
src/kabigon/application/: __init__.py  classification.py  executor.py  load_chain.py  loader_names.py  pipeline_catalog.py  planner.py  planning.py  routing.py  service.py  source_applicability.py  strategy.py
src/kabigon/core/: __init__.py  errors.py  exception.py
src/kabigon/domain/: __init__.py  errors.py  loader.py  models.py
src/kabigon/infrastructure/: __init__.py  registry.py
src/kabigon/interface/: __init__.py  cli.py
src/kabigon/loaders/: __init__.py  bbc.py  browser.py  cnn.py  compose.py  content_guard.py  curl_cffi.py  firecrawl.py  github.py  html_extractors.py  httpx.py  ltn.py  news_article.py  pdf.py  playwright.py  ptt.py  reddit.py  reel.py  truthsocial.py  twitter.py  url_match.py  youtube.py  youtube_ytdlp.py  ytdlp.py
src/kabigon/pipelines/: __init__.py  catalog.py
src/kabigon/retrieval/: classifier.py  executor.py  models.py  orchestrator.py  planner.py  strategy.py
src/kabigon/sources/: __init__.py  applicability.py
tests/: test_cli.py  test_core_models.py  test_exceptions.py  test_load_chain.py  test_load_url.py  test_loader_contract.py  test_orchestrator.py  test_pipeline_catalog.py  test_pipeline_loader_applicability.py  test_planning.py  test_registry_planning_consistency.py  test_registry_routing_consistency.py  test_retrieval.py  test_routing.py  test_source_applicability.py  test_truthsocial.py  test_youtube.py  test_youtube_ytdlp.py
tests/domain/: test_loader_contract.py
tests/loaders/: test_bbc.py  test_browser.py  test_cnn.py  test_compose.py  test_content_guard.py  test_curl_cffi.py  test_firecrawl.py  test_github.py  test_ltn.py  test_news_article.py  test_reddit.py  test_reel.py  test_truthsocial.py  test_twitter.py  test_url_match.py  test_youtube.py  test_youtube_ytdlp.py
tests/pipelines/: test_catalog.py
tests/sources/: test_applicability.py
